<resources>
    <string name="app_name">JaPyMessenger</string>
    <string name="ed_send">Ваше сообщение</string>
    <string name="butt_send">=></string>
    <string name="users_title">Пользователи в чате</string>
    <string name="chat_title">Последние сообщения</string>
    <string name="description">Logo!</string>
    <string name="status_online">ONLINE</string>
    <string name="status_offline">OFFLINE</string>
    <string name="change_nick">Nickname</string>

    <string name="login_activ_lbl">Choose user nick</string>
    <string name="hint_login">Type your nick here</string>
    <string name="butt_send_login">Готово!</string>
    <string name="login_activ_ip_lbl">Server name or IP</string>
    <string name="hint_ip">###.###.###.###</string>
</resources>
