<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.rdtc.makzzz.chat.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_activ_lbl"
        android:id="@+id/textView"
        android:gravity="center_horizontal" />

    <EditText
        android:hint="@string/hint_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_edTxt"
        android:layout_below="@+id/textView"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_activ_ip_lbl"
        android:id="@+id/login_ipTxt"
        android:layout_below="@+id/login_edTxt"
        android:gravity="center_horizontal" />

    <EditText
        android:hint="@string/hint_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_edIpTxt"
        android:layout_below="@+id/login_ipTxt"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/butt_login_choose"
        android:text="@string/butt_send_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edIpTxt"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginSet"/>
</RelativeLayout>
